03_Assignment/lalr_assignment3.output
State 57 conflicts: 1 shift/reduce
State 139 conflicts: 19 shift/reduce
State 140 conflicts: 19 shift/reduce
State 141 conflicts: 19 shift/reduce
State 142 conflicts: 19 shift/reduce
State 143 conflicts: 19 shift/reduce
State 144 conflicts: 19 shift/reduce
State 145 conflicts: 19 shift/reduce
State 146 conflicts: 19 shift/reduce
State 147 conflicts: 19 shift/reduce
State 148 conflicts: 19 shift/reduce
State 149 conflicts: 19 shift/reduce
State 150 conflicts: 19 shift/reduce
State 151 conflicts: 19 shift/reduce
State 152 conflicts: 19 shift/reduce
State 153 conflicts: 19 shift/reduce
State 154 conflicts: 19 shift/reduce
State 155 conflicts: 19 shift/reduce
State 156 conflicts: 19 shift/reduce
State 157 conflicts: 19 shift/reduce
State 184 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: external_list

    2 external_list: external_list external
    3              | external

    4 external: function_definition
    5         | declaration SEMICOLON

    6 function_definition: type_specifier declarator compound_statement
    7                    | EXTERN type_specifier declarator compound_statement

    8 declaration: type_specifier init_declarator_list_opt

    9 init_declarator_list_opt: init_declarator_list
   10                         | %empty

   11 init_declarator_list: init_declarator
   12                     | init_declarator_list COMMA init_declarator

   13 init_declarator: declarator
   14                | declarator ASSIGN initializer

   15 initializer: assignment_expression

   16 type_specifier: INT
   17               | LONG
   18               | SHORT
   19               | FLOAT
   20               | DOUBLE
   21               | VOID
   22               | CHAR
   23               | STRUCT IDENTIFIER

   24 declarator: pointer_opt direct_declarator

   25 pointer_opt: pointer
   26            | %empty

   27 pointer: MULTIPLY
   28        | MULTIPLY pointer

   29 direct_declarator: IDENTIFIER
   30                  | IDENTIFIER LPAREN parameter_list_opt RPAREN
   31                  | LPAREN declarator RPAREN

   32 parameter_list_opt: parameter_list
   33                   | %empty

   34 parameter_list: parameter_declaration
   35               | parameter_list COMMA parameter_declaration

   36 parameter_declaration: type_specifier declarator

   37 compound_statement: LBRACE block_item_list_opt RBRACE

   38 block_item_list_opt: block_item_list
   39                    | %empty

   40 block_item_list: block_item
   41                | block_item_list block_item

   42 block_item: declaration SEMICOLON
   43           | statement

   44 statement: simple_statement
   45          | compound_statement
   46          | IF LPAREN expression RPAREN statement
   47          | IF LPAREN expression RPAREN statement ELSE statement
   48          | WHILE LPAREN expression RPAREN statement
   49          | DO statement WHILE LPAREN expression RPAREN SEMICOLON
   50          | FOR LPAREN expr_opt SEMICOLON expr_opt SEMICOLON expr_opt RPAREN statement
   51          | SWITCH LPAREN expression RPAREN LBRACE case_sections_opt default_section_opt RBRACE

   52 simple_statement: expr_opt SEMICOLON
   53                 | BREAK SEMICOLON
   54                 | CONTINUE SEMICOLON
   55                 | RETURN expr_opt SEMICOLON

   56 expr_opt: expression
   57         | %empty

   58 case_sections_opt: case_sections
   59                  | %empty

   60 case_sections: case_section
   61              | case_sections case_section

   62 case_section: CASE constant_expression COLON statement_list_opt

   63 default_section_opt: DEFAULT COLON statement_list_opt
   64                    | %empty

   65 statement_list_opt: statement_list
   66                   | %empty

   67 statement_list: statement
   68               | statement_list statement

   69 expression: ambiguous_expression

   70 assignment_expression: ambiguous_expression

   71 constant_expression: ambiguous_expression

   72 ambiguous_expression: unary_expression
   73                     | ambiguous_expression COMMA ambiguous_expression
   74                     | ambiguous_expression ASSIGN ambiguous_expression
   75                     | ambiguous_expression LOGICAL_OR ambiguous_expression
   76                     | ambiguous_expression LOGICAL_AND ambiguous_expression
   77                     | ambiguous_expression BITWISE_OR ambiguous_expression
   78                     | ambiguous_expression BITWISE_XOR ambiguous_expression
   79                     | ambiguous_expression BITWISE_AND ambiguous_expression
   80                     | ambiguous_expression EQUAL ambiguous_expression
   81                     | ambiguous_expression NOT_EQUAL ambiguous_expression
   82                     | ambiguous_expression LESS_THAN ambiguous_expression
   83                     | ambiguous_expression GREATER_THAN ambiguous_expression
   84                     | ambiguous_expression LESS_EQUAL ambiguous_expression
   85                     | ambiguous_expression GREATER_EQUAL ambiguous_expression
   86                     | ambiguous_expression SPACESHIP ambiguous_expression
   87                     | ambiguous_expression PLUS ambiguous_expression
   88                     | ambiguous_expression MINUS ambiguous_expression
   89                     | ambiguous_expression MULTIPLY ambiguous_expression
   90                     | ambiguous_expression DIVIDE ambiguous_expression
   91                     | ambiguous_expression MODULO ambiguous_expression

   92 unary_expression: postfix_expression
   93                 | INCREMENT unary_expression
   94                 | DECREMENT unary_expression
   95                 | PLUS unary_expression
   96                 | MINUS unary_expression
   97                 | BITWISE_NOT unary_expression
   98                 | BITWISE_AND unary_expression
   99                 | MULTIPLY unary_expression
  100                 | SIZEOF unary_expression
  101                 | SIZEOF LPAREN type_specifier RPAREN

  102 postfix_expression: primary_expression
  103                   | postfix_expression LBRACKET expression RBRACKET
  104                   | postfix_expression LPAREN argument_expression_list_opt RPAREN
  105                   | postfix_expression DOT IDENTIFIER
  106                   | postfix_expression ARROW IDENTIFIER
  107                   | postfix_expression INCREMENT
  108                   | postfix_expression DECREMENT

  109 argument_expression_list_opt: argument_expression_list
  110                             | %empty

  111 argument_expression_list: assignment_expression
  112                         | argument_expression_list COMMA assignment_expression

  113 primary_expression: IDENTIFIER
  114                   | constant
  115                   | string_literal_sequence
  116                   | LPAREN expression RPAREN

  117 constant: INTEGER_CONSTANT
  118         | HEX_CONSTANT
  119         | FLOAT_CONSTANT
  120         | CHAR_CONSTANT

  121 string_literal_sequence: STRING_LITERAL
  122                        | string_literal_sequence STRING_LITERAL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT (258) 16
    LONG (259) 17
    SHORT (260) 18
    FLOAT (261) 19
    DOUBLE (262) 20
    VOID (263) 21
    CHAR (264) 22
    STRUCT (265) 23
    EXTERN (266) 7
    IF (267) 46 47
    ELSE (268) 47
    SWITCH (269) 51
    CASE (270) 62
    DEFAULT (271) 63
    FOR (272) 50
    WHILE (273) 48 49
    DO (274) 49
    BREAK (275) 53
    CONTINUE (276) 54
    RETURN (277) 55
    SIZEOF (278) 100 101
    IDENTIFIER (279) 23 29 30 105 106 113
    INTEGER_CONSTANT (280) 117
    HEX_CONSTANT (281) 118
    FLOAT_CONSTANT (282) 119
    CHAR_CONSTANT (283) 120
    STRING_LITERAL (284) 121 122
    PLUS (285) 87 95
    MINUS (286) 88 96
    MULTIPLY (287) 27 28 89 99
    DIVIDE (288) 90
    MODULO (289) 91
    LESS_THAN (290) 82
    GREATER_THAN (291) 83
    LESS_EQUAL (292) 84
    GREATER_EQUAL (293) 85
    EQUAL (294) 80
    NOT_EQUAL (295) 81
    LOGICAL_AND (296) 76
    LOGICAL_OR (297) 75
    BITWISE_AND (298) 79 98
    BITWISE_OR (299) 77
    BITWISE_XOR (300) 78
    BITWISE_NOT (301) 97
    ASSIGN (302) 14 74
    INCREMENT (303) 93 107
    DECREMENT (304) 94 108
    DOT (305) 105
    ARROW (306) 106
    SPACESHIP (307) 86
    LPAREN (308) 30 31 46 47 48 49 50 51 101 104 116
    RPAREN (309) 30 31 46 47 48 49 50 51 101 104 116
    LBRACE (310) 37 51
    RBRACE (311) 37 51
    LBRACKET (312) 103
    RBRACKET (313) 103
    SEMICOLON (314) 5 42 49 50 52 53 54 55
    COMMA (315) 12 35 73 112
    COLON (316) 62 63


Nonterminals, with rules where they appear

    $accept (62)
        on left: 0
    program (63)
        on left: 1
        on right: 0
    external_list (64)
        on left: 2 3
        on right: 1 2
    external (65)
        on left: 4 5
        on right: 2 3
    function_definition (66)
        on left: 6 7
        on right: 4
    declaration (67)
        on left: 8
        on right: 5 42
    init_declarator_list_opt (68)
        on left: 9 10
        on right: 8
    init_declarator_list (69)
        on left: 11 12
        on right: 9 12
    init_declarator (70)
        on left: 13 14
        on right: 11 12
    initializer (71)
        on left: 15
        on right: 14
    type_specifier (72)
        on left: 16 17 18 19 20 21 22 23
        on right: 6 7 8 36 101
    declarator (73)
        on left: 24
        on right: 6 7 13 14 31 36
    pointer_opt (74)
        on left: 25 26
        on right: 24
    pointer (75)
        on left: 27 28
        on right: 25 28
    direct_declarator (76)
        on left: 29 30 31
        on right: 24
    parameter_list_opt (77)
        on left: 32 33
        on right: 30
    parameter_list (78)
        on left: 34 35
        on right: 32 35
    parameter_declaration (79)
        on left: 36
        on right: 34 35
    compound_statement (80)
        on left: 37
        on right: 6 7 45
    block_item_list_opt (81)
        on left: 38 39
        on right: 37
    block_item_list (82)
        on left: 40 41
        on right: 38 41
    block_item (83)
        on left: 42 43
        on right: 40 41
    statement (84)
        on left: 44 45 46 47 48 49 50 51
        on right: 43 46 47 48 49 50 67 68
    simple_statement (85)
        on left: 52 53 54 55
        on right: 44
    expr_opt (86)
        on left: 56 57
        on right: 50 52 55
    case_sections_opt (87)
        on left: 58 59
        on right: 51
    case_sections (88)
        on left: 60 61
        on right: 58 61
    case_section (89)
        on left: 62
        on right: 60 61
    default_section_opt (90)
        on left: 63 64
        on right: 51
    statement_list_opt (91)
        on left: 65 66
        on right: 62 63
    statement_list (92)
        on left: 67 68
        on right: 65 68
    expression (93)
        on left: 69
        on right: 46 47 48 49 51 56 103 116
    assignment_expression (94)
        on left: 70
        on right: 15 111 112
    constant_expression (95)
        on left: 71
        on right: 62
    ambiguous_expression (96)
        on left: 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
        on right: 69 70 71 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
    unary_expression (97)
        on left: 92 93 94 95 96 97 98 99 100 101
        on right: 72 93 94 95 96 97 98 99 100
    postfix_expression (98)
        on left: 102 103 104 105 106 107 108
        on right: 92 103 104 105 106 107 108
    argument_expression_list_opt (99)
        on left: 109 110
        on right: 104
    argument_expression_list (100)
        on left: 111 112
        on right: 109 112
    primary_expression (101)
        on left: 113 114 115 116
        on right: 102
    constant (102)
        on left: 117 118 119 120
        on right: 114
    string_literal_sequence (103)
        on left: 121 122
        on right: 115 122


State 0

    0 $accept: . program $end

    INT     shift, and go to state 1
    LONG    shift, and go to state 2
    SHORT   shift, and go to state 3
    FLOAT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6
    CHAR    shift, and go to state 7
    STRUCT  shift, and go to state 8
    EXTERN  shift, and go to state 9

    program              go to state 10
    external_list        go to state 11
    external             go to state 12
    function_definition  go to state 13
    declaration          go to state 14
    type_specifier       go to state 15


State 1

   16 type_specifier: INT .

    $default  reduce using rule 16 (type_specifier)


State 2

   17 type_specifier: LONG .

    $default  reduce using rule 17 (type_specifier)


State 3

   18 type_specifier: SHORT .

    $default  reduce using rule 18 (type_specifier)


State 4

   19 type_specifier: FLOAT .

    $default  reduce using rule 19 (type_specifier)


State 5

   20 type_specifier: DOUBLE .

    $default  reduce using rule 20 (type_specifier)


State 6

   21 type_specifier: VOID .

    $default  reduce using rule 21 (type_specifier)


State 7

   22 type_specifier: CHAR .

    $default  reduce using rule 22 (type_specifier)


State 8

   23 type_specifier: STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 16


State 9

    7 function_definition: EXTERN . type_specifier declarator compound_statement

    INT     shift, and go to state 1
    LONG    shift, and go to state 2
    SHORT   shift, and go to state 3
    FLOAT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6
    CHAR    shift, and go to state 7
    STRUCT  shift, and go to state 8

    type_specifier  go to state 17


State 10

    0 $accept: program . $end

    $end  shift, and go to state 18


State 11

    1 program: external_list .
    2 external_list: external_list . external

    INT     shift, and go to state 1
    LONG    shift, and go to state 2
    SHORT   shift, and go to state 3
    FLOAT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6
    CHAR    shift, and go to state 7
    STRUCT  shift, and go to state 8
    EXTERN  shift, and go to state 9

    $default  reduce using rule 1 (program)

    external             go to state 19
    function_definition  go to state 13
    declaration          go to state 14
    type_specifier       go to state 15


State 12

    3 external_list: external .

    $default  reduce using rule 3 (external_list)


State 13

    4 external: function_definition .

    $default  reduce using rule 4 (external)


State 14

    5 external: declaration . SEMICOLON

    SEMICOLON  shift, and go to state 20


State 15

    6 function_definition: type_specifier . declarator compound_statement
    8 declaration: type_specifier . init_declarator_list_opt

    MULTIPLY  shift, and go to state 21

    SEMICOLON  reduce using rule 10 (init_declarator_list_opt)
    $default   reduce using rule 26 (pointer_opt)

    init_declarator_list_opt  go to state 22
    init_declarator_list      go to state 23
    init_declarator           go to state 24
    declarator                go to state 25
    pointer_opt               go to state 26
    pointer                   go to state 27


State 16

   23 type_specifier: STRUCT IDENTIFIER .

    $default  reduce using rule 23 (type_specifier)


State 17

    7 function_definition: EXTERN type_specifier . declarator compound_statement

    MULTIPLY  shift, and go to state 21

    $default  reduce using rule 26 (pointer_opt)

    declarator   go to state 28
    pointer_opt  go to state 26
    pointer      go to state 27


State 18

    0 $accept: program $end .

    $default  accept


State 19

    2 external_list: external_list external .

    $default  reduce using rule 2 (external_list)


State 20

    5 external: declaration SEMICOLON .

    $default  reduce using rule 5 (external)


State 21

   27 pointer: MULTIPLY .
   28        | MULTIPLY . pointer

    MULTIPLY  shift, and go to state 21

    $default  reduce using rule 27 (pointer)

    pointer  go to state 29


State 22

    8 declaration: type_specifier init_declarator_list_opt .

    $default  reduce using rule 8 (declaration)


State 23

    9 init_declarator_list_opt: init_declarator_list .
   12 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA  shift, and go to state 30

    $default  reduce using rule 9 (init_declarator_list_opt)


State 24

   11 init_declarator_list: init_declarator .

    $default  reduce using rule 11 (init_declarator_list)


State 25

    6 function_definition: type_specifier declarator . compound_statement
   13 init_declarator: declarator .
   14                | declarator . ASSIGN initializer

    ASSIGN  shift, and go to state 31
    LBRACE  shift, and go to state 32

    $default  reduce using rule 13 (init_declarator)

    compound_statement  go to state 33


State 26

   24 declarator: pointer_opt . direct_declarator

    IDENTIFIER  shift, and go to state 34
    LPAREN      shift, and go to state 35

    direct_declarator  go to state 36


State 27

   25 pointer_opt: pointer .

    $default  reduce using rule 25 (pointer_opt)


State 28

    7 function_definition: EXTERN type_specifier declarator . compound_statement

    LBRACE  shift, and go to state 32

    compound_statement  go to state 37


State 29

   28 pointer: MULTIPLY pointer .

    $default  reduce using rule 28 (pointer)


State 30

   12 init_declarator_list: init_declarator_list COMMA . init_declarator

    MULTIPLY  shift, and go to state 21

    $default  reduce using rule 26 (pointer_opt)

    init_declarator  go to state 38
    declarator       go to state 39
    pointer_opt      go to state 26
    pointer          go to state 27


State 31

   14 init_declarator: declarator ASSIGN . initializer

    SIZEOF            shift, and go to state 40
    IDENTIFIER        shift, and go to state 41
    INTEGER_CONSTANT  shift, and go to state 42
    HEX_CONSTANT      shift, and go to state 43
    FLOAT_CONSTANT    shift, and go to state 44
    CHAR_CONSTANT     shift, and go to state 45
    STRING_LITERAL    shift, and go to state 46
    PLUS              shift, and go to state 47
    MINUS             shift, and go to state 48
    MULTIPLY          shift, and go to state 49
    BITWISE_AND       shift, and go to state 50
    BITWISE_NOT       shift, and go to state 51
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    LPAREN            shift, and go to state 54

    initializer              go to state 55
    assignment_expression    go to state 56
    ambiguous_expression     go to state 57
    unary_expression         go to state 58
    postfix_expression       go to state 59
    primary_expression       go to state 60
    constant                 go to state 61
    string_literal_sequence  go to state 62


State 32

   37 compound_statement: LBRACE . block_item_list_opt RBRACE

    INT               shift, and go to state 1
    LONG              shift, and go to state 2
    SHORT             shift, and go to state 3
    FLOAT             shift, and go to state 4
    DOUBLE            shift, and go to state 5
    VOID              shift, and go to state 6
    CHAR              shift, and go to state 7
    STRUCT            shift, and go to state 8
    IF                shift, and go to state 63
    SWITCH            shift, and go to state 64
    FOR               shift, and go to state 65
    WHILE             shift, and go to state 66
    DO                shift, and go to state 67
    BREAK             shift, and go to state 68
    CONTINUE          shift, and go to state 69
    RETURN            shift, and go to state 70
    SIZEOF            shift, and go to state 40
    IDENTIFIER        shift, and go to state 41
    INTEGER_CONSTANT  shift, and go to state 42
    HEX_CONSTANT      shift, and go to state 43
    FLOAT_CONSTANT    shift, and go to state 44
    CHAR_CONSTANT     shift, and go to state 45
    STRING_LITERAL    shift, and go to state 46
    PLUS              shift, and go to state 47
    MINUS             shift, and go to state 48
    MULTIPLY          shift, and go to state 49
    BITWISE_AND       shift, and go to state 50
    BITWISE_NOT       shift, and go to state 51
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    LPAREN            shift, and go to state 54
    LBRACE            shift, and go to state 32

    SEMICOLON  reduce using rule 57 (expr_opt)
    $default   reduce using rule 39 (block_item_list_opt)

    declaration              go to state 71
    type_specifier           go to state 72
    compound_statement       go to state 73
    block_item_list_opt      go to state 74
    block_item_list          go to state 75
    block_item               go to state 76
    statement                go to state 77
    simple_statement         go to state 78
    expr_opt                 go to state 79
    expression               go to state 80
    ambiguous_expression     go to state 81
    unary_expression         go to state 58
    postfix_expression       go to state 59
    primary_expression       go to state 60
    constant                 go to state 61
    string_literal_sequence  go to state 62


State 33

    6 function_definition: type_specifier declarator compound_statement .

    $default  reduce using rule 6 (function_definition)


State 34

   29 direct_declarator: IDENTIFIER .
   30                  | IDENTIFIER . LPAREN parameter_list_opt RPAREN

    LPAREN  shift, and go to state 82

    $default  reduce using rule 29 (direct_declarator)


State 35

   31 direct_declarator: LPAREN . declarator RPAREN

    MULTIPLY  shift, and go to state 21

    $default  reduce using rule 26 (pointer_opt)

    declarator   go to state 83
    pointer_opt  go to state 26
    pointer      go to state 27


State 36

   24 declarator: pointer_opt direct_declarator .

    $default  reduce using rule 24 (declarator)


State 37

    7 function_definition: EXTERN type_specifier declarator compound_statement .

    $default  reduce using rule 7 (function_definition)


State 38

   12 init_declarator_list: init_declarator_list COMMA init_declarator .

    $default  reduce using rule 12 (init_declarator_list)


State 39

   13 init_declarator: declarator .
   14                | declarator . ASSIGN initializer

    ASSIGN  shift, and go to state 31

    $default  reduce using rule 13 (init_declarator)


State 40

  100 unary_expression: SIZEOF . unary_expression
  101                 | SIZEOF . LPAREN type_specifier RPAREN

    SIZEOF            shift, and go to state 40
    IDENTIFIER        shift, and go to state 41
    INTEGER_CONSTANT  shift, and go to state 42
    HEX_CONSTANT      shift, and go to state 43
    FLOAT_CONSTANT    shift, and go to state 44
    CHAR_CONSTANT     shift, and go to state 45
    STRING_LITERAL    shift, and go to state 46
    PLUS              shift, and go to state 47
    MINUS             shift, and go to state 48
    MULTIPLY          shift, and go to state 49
    BITWISE_AND       shift, and go to state 50
    BITWISE_NOT       shift, and go to state 51
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    LPAREN            shift, and go to state 84

    unary_expression         go to state 85
    postfix_expression       go to state 59
    primary_expression       go to state 60
    constant                 go to state 61
    string_literal_sequence  go to state 62


State 41

  113 primary_expression: IDENTIFIER .

    $default  reduce using rule 113 (primary_expression)


State 42

  117 constant: INTEGER_CONSTANT .

    $default  reduce using rule 117 (constant)


State 43

  118 constant: HEX_CONSTANT .

    $default  reduce using rule 118 (constant)


State 44

  119 constant: FLOAT_CONSTANT .

    $default  reduce using rule 119 (constant)


State 45

  120 constant: CHAR_CONSTANT .

    $default  reduce using rule 120 (constant)


State 46

  121 string_literal_sequence: STRING_LITERAL .

    $default  reduce using rule 121 (string_literal_sequence)


State 47

   95 unary_expression: PLUS . unary_expression

    SIZEOF            shift, and go to state 40
    IDENTIFIER        shift, and go to state 41
    INTEGER_CONSTANT  shift, and go to state 42
    HEX_CONSTANT      shift, and go to state 43
    FLOAT_CONSTANT    shift, and go to state 44
    CHAR_CONSTANT     shift, and go to state 45
    STRING_LITERAL    shift, and go to state 46
    PLUS              shift, and go to state 47
    MINUS             shift, and go to state 48
    MULTIPLY          shift, and go to state 49
    BITWISE_AND       shift, and go to state 50
    BITWISE_NOT       shift, and go to state 51
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    LPAREN            shift, and go to state 54

    unary_expression         go to state 86
    postfix_expression       go to state 59
    primary_expression       go to state 60
    constant                 go to state 61
    string_literal_sequence  go to state 62


State 48

   96 unary_expression: MINUS . unary_expression

    SIZEOF            shift, and go to state 40
    IDENTIFIER        shift, and go to state 41
    INTEGER_CONSTANT  shift, and go to state 42
    HEX_CONSTANT      shift, and go to state 43
    FLOAT_CONSTANT    shift, and go to state 44
    CHAR_CONSTANT     shift, and go to state 45
    STRING_LITERAL    shift, and go to state 46
    PLUS              shift, and go to state 47
    MINUS             shift, and go to state 48
    MULTIPLY          shift, and go to state 49
    BITWISE_AND       shift, and go to state 50
    BITWISE_NOT       shift, and go to state 51
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    LPAREN            shift, and go to state 54

    unary_expression         go to state 87
    postfix_expression       go to state 59
    primary_expression       go to state 60
    constant                 go to state 61
    string_literal_sequence  go to state 62


State 49

   99 unary_expression: MULTIPLY . unary_expression

    SIZEOF            shift, and go to state 40
    IDENTIFIER        shift, and go to state 41
    INTEGER_CONSTANT  shift, and go to state 42
    HEX_CONSTANT      shift, and go to state 43
    FLOAT_CONSTANT    shift, and go to state 44
    CHAR_CONSTANT     shift, and go to state 45
    STRING_LITERAL    shift, and go to state 46
    PLUS              shift, and go to state 47
    MINUS             shift, and go to state 48
    MULTIPLY          shift, and go to state 49
    BITWISE_AND       shift, and go to state 50
    BITWISE_NOT       shift, and go to state 51
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    LPAREN            shift, and go to state 54

    unary_expression         go to state 88
    postfix_expression       go to state 59
    primary_expression       go to state 60
    constant                 go to state 61
    string_literal_sequence  go to state 62


State 50

   98 unary_expression: BITWISE_AND . unary_expression

    SIZEOF            shift, and go to state 40
    IDENTIFIER        shift, and go to state 41
    INTEGER_CONSTANT  shift, and go to state 42
    HEX_CONSTANT      shift, and go to state 43
    FLOAT_CONSTANT    shift, and go to state 44
    CHAR_CONSTANT     shift, and go to state 45
    STRING_LITERAL    shift, and go to state 46
    PLUS              shift, and go to state 47
    MINUS             shift, and go to state 48
    MULTIPLY          shift, and go to state 49
    BITWISE_AND       shift, and go to state 50
    BITWISE_NOT       shift, and go to state 51
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    LPAREN            shift, and go to state 54

    unary_expression         go to state 89
    postfix_expression       go to state 59
    primary_expression       go to state 60
    constant                 go to state 61
    string_literal_sequence  go to state 62


State 51

   97 unary_expression: BITWISE_NOT . unary_expression

    SIZEOF            shift, and go to state 40
    IDENTIFIER        shift, and go to state 41
    INTEGER_CONSTANT  shift, and go to state 42
    HEX_CONSTANT      shift, and go to state 43
    FLOAT_CONSTANT    shift, and go to state 44
    CHAR_CONSTANT     shift, and go to state 45
    STRING_LITERAL    shift, and go to state 46
    PLUS              shift, and go to state 47
    MINUS             shift, and go to state 48
    MULTIPLY          shift, and go to state 49
    BITWISE_AND       shift, and go to state 50
    BITWISE_NOT       shift, and go to state 51
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    LPAREN            shift, and go to state 54

    unary_expression         go to state 90
    postfix_expression       go to state 59
    primary_expression       go to state 60
    constant                 go to state 61
    string_literal_sequence  go to state 62


State 52

   93 unary_expression: INCREMENT . unary_expression

    SIZEOF            shift, and go to state 40
    IDENTIFIER        shift, and go to state 41
    INTEGER_CONSTANT  shift, and go to state 42
    HEX_CONSTANT      shift, and go to state 43
    FLOAT_CONSTANT    shift, and go to state 44
    CHAR_CONSTANT     shift, and go to state 45
    STRING_LITERAL    shift, and go to state 46
    PLUS              shift, and go to state 47
    MINUS             shift, and go to state 48
    MULTIPLY          shift, and go to state 49
    BITWISE_AND       shift, and go to state 50
    BITWISE_NOT       shift, and go to state 51
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    LPAREN            shift, and go to state 54

    unary_expression         go to state 91
    postfix_expression       go to state 59
    primary_expression       go to state 60
    constant                 go to state 61
    string_literal_sequence  go to state 62


State 53

   94 unary_expression: DECREMENT . unary_expression

    SIZEOF            shift, and go to state 40
    IDENTIFIER        shift, and go to state 41
    INTEGER_CONSTANT  shift, and go to state 42
    HEX_CONSTANT      shift, and go to state 43
    FLOAT_CONSTANT    shift, and go to state 44
    CHAR_CONSTANT     shift, and go to state 45
    STRING_LITERAL    shift, and go to state 46
    PLUS              shift, and go to state 47
    MINUS             shift, and go to state 48
    MULTIPLY          shift, and go to state 49
    BITWISE_AND       shift, and go to state 50
    BITWISE_NOT       shift, and go to state 51
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    LPAREN            shift, and go to state 54

    unary_expression         go to state 92
    postfix_expression       go to state 59
    primary_expression       go to state 60
    constant                 go to state 61
    string_literal_sequence  go to state 62


State 54

  116 primary_expression: LPAREN . expression RPAREN

    SIZEOF            shift, and go to state 40
    IDENTIFIER        shift, and go to state 41
    INTEGER_CONSTANT  shift, and go to state 42
    HEX_CONSTANT      shift, and go to state 43
    FLOAT_CONSTANT    shift, and go to state 44
    CHAR_CONSTANT     shift, and go to state 45
    STRING_LITERAL    shift, and go to state 46
    PLUS              shift, and go to state 47
    MINUS             shift, and go to state 48
    MULTIPLY          shift, and go to state 49
    BITWISE_AND       shift, and go to state 50
    BITWISE_NOT       shift, and go to state 51
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    LPAREN            shift, and go to state 54

    expression               go to state 93
    ambiguous_expression     go to state 81
    unary_expression         go to state 58
    postfix_expression       go to state 59
    primary_expression       go to state 60
    constant                 go to state 61
    string_literal_sequence  go to state 62


State 55

   14 init_declarator: declarator ASSIGN initializer .

    $default  reduce using rule 14 (init_declarator)


State 56

   15 initializer: assignment_expression .

    $default  reduce using rule 15 (initializer)


State 57

   70 assignment_expression: ambiguous_expression .
   73 ambiguous_expression: ambiguous_expression . COMMA ambiguous_expression
   74                     | ambiguous_expression . ASSIGN ambiguous_expression
   75                     | ambiguous_expression . LOGICAL_OR ambiguous_expression
   76                     | ambiguous_expression . LOGICAL_AND ambiguous_expression
   77                     | ambiguous_expression . BITWISE_OR ambiguous_expression
   78                     | ambiguous_expression . BITWISE_XOR ambiguous_expression
   79                     | ambiguous_expression . BITWISE_AND ambiguous_expression
   80                     | ambiguous_expression . EQUAL ambiguous_expression
   81                     | ambiguous_expression . NOT_EQUAL ambiguous_expression
   82                     | ambiguous_expression . LESS_THAN ambiguous_expression
   83                     | ambiguous_expression . GREATER_THAN ambiguous_expression
   84                     | ambiguous_expression . LESS_EQUAL ambiguous_expression
   85                     | ambiguous_expression . GREATER_EQUAL ambiguous_expression
   86                     | ambiguous_expression . SPACESHIP ambiguous_expression
   87                     | ambiguous_expression . PLUS ambiguous_expression
   88                     | ambiguous_expression . MINUS ambiguous_expression
   89                     | ambiguous_expression . MULTIPLY ambiguous_expression
   90                     | ambiguous_expression . DIVIDE ambiguous_expression
   91                     | ambiguous_expression . MODULO ambiguous_expression

    PLUS           shift, and go to state 94
    MINUS          shift, and go to state 95
    MULTIPLY       shift, and go to state 96
    DIVIDE         shift, and go to state 97
    MODULO         shift, and go to state 98
    LESS_THAN      shift, and go to state 99
    GREATER_THAN   shift, and go to state 100
    LESS_EQUAL     shift, and go to state 101
    GREATER_EQUAL  shift, and go to state 102
    EQUAL          shift, and go to state 103
    NOT_EQUAL      shift, and go to state 104
    LOGICAL_AND    shift, and go to state 105
    LOGICAL_OR     shift, and go to state 106
    BITWISE_AND    shift, and go to state 107
    BITWISE_OR     shift, and go to state 108
    BITWISE_XOR    shift, and go to state 109
    ASSIGN         shift, and go to state 110
    SPACESHIP      shift, and go to state 111
    COMMA          shift, and go to state 112

    COMMA     [reduce using rule 70 (assignment_expression)]
    $default  reduce using rule 70 (assignment_expression)


State 58

   72 ambiguous_expression: unary_expression .

    $default  reduce using rule 72 (ambiguous_expression)


State 59

   92 unary_expression: postfix_expression .
  103 postfix_expression: postfix_expression . LBRACKET expression RBRACKET
  104                   | postfix_expression . LPAREN argument_expression_list_opt RPAREN
  105                   | postfix_expression . DOT IDENTIFIER
  106                   | postfix_expression . ARROW IDENTIFIER
  107                   | postfix_expression . INCREMENT
  108                   | postfix_expression . DECREMENT

    INCREMENT  shift, and go to state 113
    DECREMENT  shift, and go to state 114
    DOT        shift, and go to state 115
    ARROW      shift, and go to state 116
    LPAREN     shift, and go to state 117
    LBRACKET   shift, and go to state 118

    $default  reduce using rule 92 (unary_expression)


State 60

  102 postfix_expression: primary_expression .

    $default  reduce using rule 102 (postfix_expression)


State 61

  114 primary_expression: constant .

    $default  reduce using rule 114 (primary_expression)


State 62

  115 primary_expression: string_literal_sequence .
  122 string_literal_sequence: string_literal_sequence . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 119

    $default  reduce using rule 115 (primary_expression)


State 63

   46 statement: IF . LPAREN expression RPAREN statement
   47          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 120


State 64

   51 statement: SWITCH . LPAREN expression RPAREN LBRACE case_sections_opt default_section_opt RBRACE

    LPAREN  shift, and go to state 121


State 65

   50 statement: FOR . LPAREN expr_opt SEMICOLON expr_opt SEMICOLON expr_opt RPAREN statement

    LPAREN  shift, and go to state 122


State 66

   48 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 123


State 67

   49 statement: DO . statement WHILE LPAREN expression RPAREN SEMICOLON
